Fixing DockFlow not connecting
